syntax = "proto3";

package com.academy.fintech.scoring;

option java_multiple_files = true;

service ScoringDataService{
  rpc GetScoringData(ScoringDataRequest) returns (ScoringDataResponse) {}
}

message ScoringDataRequest{
  string clientId = 1;
  string productCode = 2;
  int32 loanTerm = 3;
  string disbursementAmount = 4;
  string originationAmount = 5;
  string interest = 6;
}

message ScoringDataResponse{
  string periodPayment = 1;
  repeated AgreementResponse activeAgreements = 2;
}

message AgreementResponse{
  string agreementNumber = 1;
  string productCode = 2;
  int32 loanTerm = 3;
  string principalAmount = 4;
  string originationAmount = 5;
  string interest = 6;
  string disbursementDate = 7;
  string nextPaymentDate = 8;
  repeated PaymentScheduleResponse paymentSchedules = 9;
}

message PaymentScheduleResponse{
  int32 version = 1;
  repeated PaymentSchedulePaymentResponse payments = 2;
}

message PaymentSchedulePaymentResponse{
  int32 period = 1;
  string payment = 2;
  string interest = 3;
  string principal = 4;
  string paymentDate = 5;
  string status = 6;
}